--- a/templates/resolved.conf.j2
+++ b/templates/resolved.conf.j2
@@ -1,14 +1,10 @@
 ## /etc/systemd/resolved.conf
 # systemd-resolved runs a local DNS resolver
-# ln -sf /lib/systemd/resolv.conf /etc/
+# in /etc/resolv.conf: nameserver 127.0.0.53
 # {{ ansible_managed }}
 
 [Resolve]
-{% if 'dns' in group_names %}
-DNS=127.0.0.1
-{% else %}
 DNS={{ preferred_dns }}
-{% endif %}
 FallbackDNS={{ fallback_dns }}
 #Domains=
 LLMNR=no
