--- a/templates/resolved.conf.j2
+++ b/templates/resolved.conf.j2
@@ -6,7 +6,7 @@
 [Resolve]
 DNS={{ preferred_dns }}
 FallbackDNS={{ fallback_dns }}
-#Domains=
+Domains={{ default_domain }}
 LLMNR=no
 #MulticastDNS=no
 DNSSEC=no
