--- a/templates/resolv.conf.j2
+++ b/templates/resolv.conf.j2
@@ -1,6 +1,8 @@
-##
-# /etc/resolv.conf
 # {{ ansible_managed }}
+
+{% if default_domain | d() %}
+search {{ default_domain }}
+{% endif %}
 
 {% if 'dns' in group_names %}
 nameserver 127.0.0.1
