--- a/templates/resolved.conf.j2
+++ b/templates/resolved.conf.j2
@@ -5,5 +5,6 @@ FallbackDNS={{ fallback_dns }}
 {% for domain in search_domains %}
 Domains={{ domain }}
 {% endfor %}
-LLMNR=no
 DNSSEC=no
+LLMNR=resolve
+MulticastDNS=resolve
